openmolar (0.2.1+bzr0752-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (bzr 752)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 11:30:55 +0100


openmolar (0.2.1+bzr0751-0~__DIST__0) __DIST__; urgency=low

   * new upstream version (bzr 751)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Jun 2012 23:21:24 +0100


openmolar (0.2.1+bzr0750-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (bzr 750)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 25 Jun 2012 10:04:33 +0100


openmolar (0.2.1+bzr0749-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (ability to specify dentist for recall)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Thu, 21 Jun 2012 18:27:55 +0100


openmolar (0.2.1+bzr0748-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (uses **kwargs for connection, thus avoiding passing a blank dict in for ssl_settings)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 19 Jun 2012 23:37:07 +0100


openmolar (0.2.1+bzr0746-0~__DIST__0) __DIST__; urgency=low

  * new upstream version (fixes the translation problem)

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 08 Jun 2012 13:36:36 +0100


openmolar (0.2.1+bzr0745-0~__DIST__0) __DIST__; urgency=low

  * new upstream version

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 08 Jun 2012 09:34:30 +0100


openmolar (0.2.1+bzr0744-2~__DIST__2) __DIST__; urgency=low

  * new build script envoking pbuilder

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 06 Jun 2012 13:56:37 +0100


openmolar (0.2.1+bzr0744-1~__DIST__1) __DIST__; urgency=low

  * trial build with new pbuilder environment

 -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 06 Jun 2012 10:46:47 +0100


openmolar (0.2.1+bzr0744-0~__DIST__0) __DIST__; urgency=low

  * trial build

 -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 01 Jun 2012 15:30:44 +0100