@@ -1,3 +1,10 @@
+openmolar (0.2.1+bzr0753-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream version (bzr 753)
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 26 Jun 2012 12:37:38 +0100
+
+
 openmolar (0.2.1+bzr0752-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream version (bzr 752)
